# hackathon2.0

./: .gitignore
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: analyze.py  report.py
backend/app/core/: config.py
backend/app/schemas/: analyze.py  report.py
backend/app/services/: ai_analyzer.py  analyzer.py  emailer.py  errors.py  screenshot.py  seo_parser.py
backend/convertx_ai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Chatbot.jsx  DataList.jsx  EmailBar.jsx  LoadingOverlay.jsx  ScoreCard.jsx  ScreenshotComparison.jsx  ScreenshotPanel.jsx
frontend/src/lib/: api.js
frontend/src/utils/: generateReport.js
