[project]
name = "convertx-ai-backend"
version = "0.1.0"
description = "Backend for ConvertX AI hackathon project"
authors = [{name = "ConvertX AI"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "httpx",
    "playwright",
    "beautifulsoup4",
    "openai",
    "resend",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "python-dotenv",
]

[tool.ruff]
line-length = 100
